220504 수 1614 - 컨텐츠 원문 모달 > 셀렉트 옵션 커스텀 교체 및 레이아웃 수정

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -771,6 +771,13 @@ address > .copyright {
   vertical-align: top;
 }
 
+.show-all-top .cont-select-box {
+  margin-left: 8px;
+}
+.show-all-top .cont-select-box .option-item {
+  line-height: normal;
+}
+
 /* .sort-option {
   position: relative;
   display: inline-block;
