--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -611,12 +611,12 @@ address > .copyright {
 /**  LOADING ANIMATION  **/
 #loading {
   /* display: none; */
-  /* position: fixed;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0; */
-  /* z-index: 300; */
+  left: 0;
+  z-index: 300;
 }
 .loading-bg {
   position: absolute;
@@ -630,7 +630,7 @@ address > .copyright {
   -webkit-backdrop-filter: blur(10px);
   border-radius: 14px;
   box-shadow: 1px 3px 12px rgba(88, 88, 88, 0.2);
-  z-index: 300;
+  /* z-index: 300; */
 }
 .loading-bg .loading-title {
   margin-top: 60px;
