220510 화 1651 - 검색 설정 관리 페이지 추가

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -339,7 +339,8 @@ header:hover {
 .search-group-box .input-group > input {
   font-size: 13px;
 }
-.search-group-box .input-group > label {
+.search-group-box .input-group > label,
+.search-group-box .input-group > label > span {
   font-weight: 400;
   color: #666;
   vertical-align: 2px;
