--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1730,6 +1730,233 @@ body {
 .usr-set-wrap {
   font-size: 14px;
 }
+.usr-set-list {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  gap: 30px;
+}
+.usr-set-item {
+  transition: 0.35s ease-in;
+}
+.usr-set-item.now-on {
+  /* transform: scale(1.07, 1.07); */
+}
+.usr-set-item .set-btn-wrap > p {
+  display: inline-block;
+  cursor: pointer;
+}
+.usr-set-item .set-btn-wrap > .save-btn,
+.usr-set-item .set-btn-wrap > .del-btn,
+.usr-set-item .set-btn-wrap > .cancel-btn {
+  display: none;
+}
+.usr-set-item.now-on .set-btn-wrap > .modify-btn {
+  display: none;
+}
+.usr-set-item.now-on .set-btn-wrap > .save-btn,
+.usr-set-item.now-on .set-btn-wrap > .del-btn,
+.usr-set-item.now-on .set-btn-wrap > .cancel-btn {
+  display: inline-block;
+}
+
+.set-info-wrap .set-info-item {
+  padding-bottom: 20px;
+  margin: 20px 0;
+  border-bottom: 1px solid #ddd;
+}
+.set-info-wrap .set-info-item:last-child {
+  border-bottom: none;
+}
+
+.set-info-wrap .info-item-title {
+  /* margin-top: 10px; */
+  margin-bottom: 10px;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.set-info-wrap .info-item-input {
+}
+.usr-set-item .included-word-wrap,
+.usr-set-item .excluded-word-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  gap: 6px;
+}
+.usr-set-item .included-word-wrap > .included-word,
+.usr-set-item .excluded-word-wrap > .excluded-word {
+  display: inline-block;
+  padding: 2px 10px 2px 10px;
+  border-radius: 20px;
+  border: 1px solid #888;
+  font-size: 13px;
+}
+.usr-set-item.now-on .included-word-wrap > .included-word,
+.usr-set-item.now-on .excluded-word-wrap > .excluded-word {
+  padding-right: 4px;
+}
+.usr-set-item .included-word-wrap > .included-word > span,
+.usr-set-item .excluded-word-wrap > .excluded-word > span {
+  font-weight: 500;
+}
+.usr-set-item .included-word-wrap > .included-word > em,
+.usr-set-item .excluded-word-wrap > .excluded-word > em {
+  /* content: ""; */
+  /* display: inline-block; */
+  display: none;
+  width: 18px;
+  height: 18px;
+  margin-left: 4px;
+  border-radius: 50%;
+  /* background-color: #ddd; */
+  /* vertical-align: -2px; */
+  background-image: url("../img/icon/icon-x.svg");
+  background-repeat: no-repeat;
+  background-size: 40%;
+  background-position: center center;
+  vertical-align: middle;
+  cursor: pointer;
+}
+.usr-set-item.now-on .included-word-wrap > .included-word > em,
+.usr-set-item.now-on .excluded-word-wrap > .excluded-word > em {
+  display: inline-block;
+}
+.info-item-input .add-btn {
+  display: inline-block;
+}
+
+.info-item-input .add-word-wrap {
+  display: none;
+}
+.usr-set-item.now-on .info-item-input .add-word-wrap {
+  display: block;
+  margin: 14px 0 10px;
+}
+
+/* .usr-set-item .info-item-input .add-word-wrap::after, */
+.usr-set-item .info-item-input .add-word-wrap .add-option::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.usr-set-item .info-item-input .add-word-wrap .add-option {
+  /* display: inline-block; */
+  text-align: right;
+  /* float: right; */
+  margin-bottom: 4px;
+}
+.add-word-wrap .add-option > .add-option-label {
+  margin-right: 4px;
+}
+.add-word-wrap .add-option > .add-option-label:last-child {
+  margin-right: 0;
+}
+.add-word-wrap .add-option input,
+.add-word-wrap .add-option .label-txt {
+  font-size: 13px;
+}
+.add-word-wrap .add-option .label-txt {
+  vertical-align: 2px;
+}
+
+.add-word-wrap .add-input {
+  position: relative;
+}
+.add-word-wrap .add-input > input {
+  width: 100%;
+}
+.add-word-wrap .add-input > .add-btn {
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
+  width: 20px;
+  height: 20px;
+  background-color: #eaeaea;
+  border: none;
+  border-radius: 4px;
+  text-indent: -99999px;
+  cursor: pointer;
+}
+.add-word-wrap .add-input > .add-btn::before,
+.add-word-wrap .add-input > .add-btn::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #888;
+}
+.add-word-wrap .add-input > .add-btn::before {
+  width: 8px;
+  height: 1px;
+}
+.add-word-wrap .add-input > .add-btn::after {
+  width: 1px;
+  height: 8px;
+}
+
+.usr-set-item .info-period {
+}
+
+.info-period .searched-date-wrap {
+  /* font-size: 0; */
+}
+.info-period .searched-date-wrap > .search-date {
+  /* display: inline-block; */
+  /* width: 50%; */
+  margin-bottom: 8px;
+}
+.info-period .searched-date-wrap > .search-date:last-child {
+  margin-bottom: 0;
+}
+.searched-date-wrap .search-date > .date-title {
+  display: inline-block;
+  margin-bottom: 4px;
+  font-size: 13px;
+  font-weight: 500;
+}
+.usr-set-item .searched-date-wrap .search-date > .date-input > input,
+.usr-set-item input[type="text"] {
+  width: 100%;
+  height: 32px;
+  padding-right: 5px;
+  border-radius: 6px;
+  border: 1px solid #eee;
+  font-size: 13px;
+  text-indent: 6px;
+}
+.usr-set-item.now-on .searched-date-wrap .search-date > .date-input > input,
+.usr-set-item.now-on input[type="text"] {
+  border: 1px solid #bbb;
+}
+
+.info-channel .search-group-wrap {
+  padding: 20px 10px;
+  background-color: #f5f5f5;
+}
+.search-group-wrap > .search-group {
+  width: 100%;
+  padding: 24px 0 20px;
+  border-bottom: 1px solid #ddd;
+}
+.search-group-wrap > .search-group:first-child {
+  padding-top: 0;
+}
+.search-group-wrap > .search-group:last-child {
+  padding-bottom: 0;
+  border-bottom: 0;
+}
+.search-group-wrap > .search-group .all-btn {
+  display: none;
+}
+.usr-set-item.now-on .search-group-wrap .search-group .all-btn {
+  display: block;
+}
 
 @media all and (max-width: 1024px) {
 }
