--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,28 @@
 @import url("./layout.css");
 @import url("./lib.css");
 
+/** SAMPLE **/
+.chart-dummy.engagement {
+  width: 190px;
+  height: 190px;
+  background-color: lightgreen;
+}
+#stmtTrdSwpContainer .trend-chart-list {
+  width: 100%;
+  height: 300px;
+  background-color: lightblue;
+}
+#enggTrdSwpContainer .trend-chart-list {
+  width: 100%;
+  height: 300px;
+  background-color: lightcoral;
+}
+#postTrdSwpContainer .trend-chart-list {
+  width: 100%;
+  height: 300px;
+  background-color: lightgreen;
+}
+
 .mo-section {
   display: none;
 }
