--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1855,6 +1855,9 @@ body {
 .usr-set-item.now-on .info-optional-word {
   display: block;
 }
+.usr-set-item.now-on .info-optional-word .info-item-title {
+  margin-bottom: 4px;
+}
 
 .added-word-wrap > .add-word {
   display: none;
@@ -1938,6 +1941,7 @@ body {
 }
 
 .info-period .searched-date-wrap > .search-date {
+  position: relative;
   margin-bottom: 14px;
 }
 .info-period .searched-date-wrap > .search-date:last-child {
@@ -1945,14 +1949,18 @@ body {
 }
 .searched-date-wrap .search-date > .date-title {
   display: inline-block;
-  margin-bottom: 4px;
-  font-size: 13px;
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  /* margin-bottom: 4px; */
+  font-size: 12px;
   font-weight: 500;
 }
 .usr-set-item .searched-date-wrap .search-date > .date-input > input,
 .usr-set-item input[type="text"] {
   width: 100%;
-  height: 32px;
+  height: 30px;
   padding-right: 5px;
   border-radius: 6px;
   border: 1px solid #eee;
@@ -1964,6 +1972,7 @@ body {
   border: 1px solid #888;
 }
 .usr-set-item .searched-date-wrap .search-date > .date-input > input {
+  text-align: center;
   cursor: pointer;
 }
 
