--- a/src/css/style.css
+++ b/src/css/style.css
@@ -608,12 +608,17 @@ body {
   font-size: 14px;
 }
 .tab-article .tab-list {
+  display: inline-block;
+  padding: 0;
   margin-bottom: 16px;
   font-size: 0;
+  border-radius: 18px;
+  background-color: #eeefef;
+  box-shadow: 1px 3px 6px rgba(128, 128, 128, 0.1) inset;
 }
 .tab-article .tab-list .tab-item {
   display: inline-block;
-  padding: 11px 34px;
+  padding: 13px 34px;
   color: #919191;
   font-size: 23px;
   font-weight: 700;
